[gd_scene load_steps=7 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://pause.png" type="Texture" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://settingshover.png" type="Texture" id=4]
[ext_resource path="res://settings.png" type="Texture" id=5]
[ext_resource path="res://SettingsMenu.tscn" type="PackedScene" id=6]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PauseMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )

[node name="TextureRect" type="TextureRect" parent="PauseMenu/ColorRect"]
margin_left = 24.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ColorRect/CenterContainer"]
margin_left = 115.0
margin_top = 26.0
margin_right = 205.0
margin_bottom = 294.0
custom_constants/separation = 4

[node name="QuitButton" type="Button" parent="PauseMenu/ColorRect/CenterContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 30.0
rect_min_size = Vector2( 90, 30 )
size_flags_vertical = 0
text = "exit(!)"

[node name="BackButton" type="Button" parent="PauseMenu/ColorRect/CenterContainer/VBoxContainer"]
visible = false
margin_top = 34.0
margin_right = 90.0
margin_bottom = 64.0
rect_min_size = Vector2( 90, 30 )
size_flags_vertical = 0
text = "back"

[node name="SettingsButton" type="Button" parent="PauseMenu/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 90.0
margin_bottom = 64.0
rect_min_size = Vector2( 90, 30 )
size_flags_vertical = 0
text = "settings"

[node name="Gap" type="Control" parent="PauseMenu/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 90.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 200 )

[node name="Settings" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -16.0
margin_right = 48.0
margin_bottom = 16.0
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="PauseMenu/ColorRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="toggled" from="Settings" to="." method="_on_Settings_toggled"]
